adding campaign dataframe as csv

--- a/Starter_Files/Resources/campaign_dataframe.ipynb
+++ b/Starter_Files/Resources/campaign_dataframe.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "b700a2e0-1840-4ddf-9bce-39e3bd618c14",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "d8b7134c-a51a-4c0c-955d-0add09503577",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "a8efb644-acf1-4344-8fd7-f7ee9dc29f4e",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "1419321c-41f8-436f-a78a-2270e3375eb7",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "c2022453-2bcc-400d-af2e-6e2f46b6452c",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
        "4 2021-08-23 05:00:00     theater        plays  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "e74f056d-9525-460e-a819-9d25143e3596",
    "metadata": {},
    "outputs": [],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "cd8ddbb9-44e8-43e5-85b6-65ed8d735064",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
        "4 2021-08-23 05:00:00     theater        plays        cat4        subcat4  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "9e02e4a0-328c-4af9-b13f-6750942c6229",
    "metadata": {},
    "outputs": [],
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "40d0cf52-5ad0-4d91-b286-147ff79c8449",
    "metadata": {},
    "outputs": [
@@ -719,7 +719,7 @@
        "4 2021-08-23 05:00:00        cat4        subcat4  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,8 +730,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "49a9ec32-41c2-4a36-8bf5-b43f072c8581",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporting dataframe as csv\n",
+    "campaign_df.to_csv(\"campaign_data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f38ee4d-4a99-430b-a3e9-42ccd9a9798e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df9be110-240f-4d69-9d75-bafdb1c2c467",
    "metadata": {},
    "outputs": [],
    "source": []
