Adding notebook with contact dataframe and exported contacts.csv

--- a/Starter_Files/Resources/campaign_dataframe.ipynb
+++ b/Starter_Files/Resources/campaign_dataframe.ipynb
@@ -157,16 +157,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#temporary category and sub-category df while working in non main notebook\n",
-    "category_df = pd.DataFrame({\n",
-    "    \"category_id\": [\"cat1\", \"cat2\", \"cat3\", \"cat4\", \"cat5\", \"cat6\", \"cat7\", \"cat8\", \"cat9\"],\n",
-    "    \"category\": [\"food\", \"music\", \"technology\", \"theater\", \"film & video\", \"publishing\", \"games\", \"photography\", \"journalism\"]\n",
-    "})\n",
+    "#loading category.csv and subcategory.csv as dataframes\n",
+    "category_df = pd.read_csv(\"category.csv\")\n",
     "\n",
-    "subcategory_df = pd.DataFrame({\n",
-    "    \"subcategory_id\": [\"subcat1\", \"subcat2\", \"subcat3\", \"subcat4\", \"subcat5\", \"subcat6\", \"subcat7\", \"subcat8\", \"subcat9\", \"subcat10\"],\n",
-    "    \"subcategory\": [\"food trucks\", \"rock\", \"web\", \"plays\", \"documentary\", \"electric music\", \"drama\", \"indie rock\", \"wearables\", \"nonfiction\"]\n",
-    "})\n",
+    "subcategory_df = pd.read_csv(\"subcategory.csv\")\n",
     "\n",
     "# Split \"category & sub-category\" column into \"category\" and \"subcategory\"\n",
     "campaign_df[\"category\"] = campaign_df[\"category & sub-category\"].str.split('/').str[0]\n",
